# todo_app

./: .env.example  .gitignore  CLAUDE.md  README.md  debug_cli.py  demonstrate_functionality.py  next.config.js  next.config.ts  package-lock.json  package.json  postcss.config.js  pyproject.toml  setup.bat  setup.sh  tailwind.config.ts  test_functionality.py  todo_tasks.json  tsconfig.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
cli_todo_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
history/prompts/001-multi-user-todo/: 1-create-multi-user-todo-spec.spec.prompt.md  2-create-impl-plan.plan.prompt.md  3-create-impl-tasks.tasks.prompt.md  4-implement-app.impl.prompt.md
history/prompts/constitution/: 1-create-cli-todo-constitution.constitution.prompt.md
history/prompts/todo-app/: 2-create-cli-todo-spec.spec.prompt.md  3-create-cli-todo-plan.plan.prompt.md  4-create-cli-todo-tasks.tasks.prompt.md  5-implement-cli-todo-app.red.prompt.md
prisma/: schema.prisma
specs/001-multi-user-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-user-todo/checklists/: requirements.md
specs/001-multi-user-todo/contracts/: api-contracts.md
specs/todo-app/: plan.md  spec.md  tasks.md
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/components/auth/: auth-button.tsx  login-form.tsx  (+1 more)
src/types/: auth.types.ts  todo.types.ts
todo_app/: __init__.py  __main__.py  cli.py  models.py  services.py  storage.py  utils.py
(+23 files in other folders)
